[FIX] Technologies scrollbar

--- a/styles/0/profile/Profile.module.scss
+++ b/styles/0/profile/Profile.module.scss
@@ -418,11 +418,16 @@ $profilePicSize: 10rem;
     }
 
     div:nth-child(1) {
+        height: 100%;
         max-height: 100%;
-        overflow: scroll;
+        overflow-x: hidden;
+        overflow-y: auto;
 
         display: flex;
         flex-direction: row;
+        justify-content: start !important;
+        align-items: start !important;
+        align-content: start !important;
         flex-wrap: wrap;
     }
 
