--- a/styles/0/teams/Create.module.scss
+++ b/styles/0/teams/Create.module.scss
@@ -17,7 +17,7 @@
         width: 100%;
     }
 
-    input { 
+    input {
         width: 100%;
     }
 
@@ -415,11 +415,16 @@
     }
 
     div:nth-child(1) {
+        height: 100%;
         max-height: 100%;
-        overflow: scroll;
+        overflow-x: hidden;
+        overflow-y: auto;
 
         display: flex;
         flex-direction: row;
+        justify-content: start !important;
+        align-items: start !important;
+        align-content: start !important;
         flex-wrap: wrap;
     }
 
