--- a/styles/0/teams/Team.module.scss
+++ b/styles/0/teams/Team.module.scss
@@ -312,11 +312,16 @@
     }
 
     div:nth-child(1) {
+        height: 100%;
         max-height: 100%;
-        overflow: scroll;
+        overflow-x: hidden;
+        overflow-y: auto;
 
         display: flex;
         flex-direction: row;
+        justify-content: start !important;
+        align-items: start !important;     
+        align-content: start !important;
         flex-wrap: wrap;
     }
 
@@ -333,7 +338,6 @@
 
         border: 1px solid #e1e4e83b;
         border-radius: .5rem;
-
 
         backdrop-filter: blur(10px);
         -webkit-backdrop-filter: blur(10px);
